Bug 146556 - feature 'drag-mirror' is broken
Summary: feature 'drag-mirror' is broken
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
7.2.2.2 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.4.0 target:7.3.0.2 target:7.2.6
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2022-01-03 23:49 UTC by Regina Henschel
Modified: 2022-01-10 17:00 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Shape to be mirrored (10.51 KB, application/vnd.oasis.opendocument.graphics)
2022-01-03 23:49 UTC, Regina Henschel
Details
screen recording (6.40 MB, video/quicktime)
2022-01-08 11:42 UTC, Noel Grandin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2022-01-03 23:49:08 UTC
Created attachment 177300 [details]
Shape to be mirrored

Open attached file.
Show guides and enable snap to guide.
click on shape.
Use tool 'Flip' from sub-toolbar 'Transformations' in 'Line and Filling' toolbar.
Drag the end points of the axis to the snap points.
Grab left-bottom handle of the snap rectangle of the shape and drag it onto the other side of the axis.

Expected: The shape is mirrored at the axis.
Actual: Nothing happens.

It is broken at least since Version: 7.2.2.2 (x64) / LibreOffice Community
Build ID: 02b2acce88a210515b4a5bb2e46cbfb63fe97d56
CPU threads: 8; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL

It is OK in Version: 7.1.5.2 (x64) / LibreOffice Community
Build ID: 85f04e9f809797b8199d13c421bd8a2b025d52b5
CPU threads: 8; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: de-DE (en_US); UI: en-US
Calc: threaded
Comment 1 Regina Henschel 2022-01-04 00:03:39 UTC
And a little bit narrower:

Broken in Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 88ca6d7834a9d710dc124ee845fd3c270e33b59a
CPU threads: 8; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL

OK in Version: 7.2.0.0.alpha0+ (x64)
Build ID: 4e63ec27b69fa01ff610c894c9fbf05c377a6179
CPU threads: 8; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL
Comment 2 Xisco Faulí 2022-01-04 10:49:45 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=11e52fe2979b0947814a49b9c17ec373795cbf8e

author	Noel <noel.grandin@collabora.co.uk>	2020-12-22 15:42:08 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2021-01-02 15:26:38 +0100
commit 11e52fe2979b0947814a49b9c17ec373795cbf8e (patch)
tree 48268579f052b7fdfcc2c334fffe8c91d29cb234
parent 610ceb05025c9c7a9a34dddcb0dac506b8eab441 (diff)
introduce Degree100 strong_int type

Bisected with: bibisect-linux64-7.2

Adding Cc: to Noel
Comment 3 Noel Grandin 2022-01-08 11:42:29 UTC
Created attachment 177388 [details]
screen recording

this works for me, see attached video
Comment 4 Regina Henschel 2022-01-08 12:41:50 UTC
I can confirm, that it mirrors, if the drag target is somewhere left-top of the shape, as you have done in your screen-cast. But it should mirror as soon as your drag movement crosses the mirror axis. Please compare the behavior with that in an old LO version.
Comment 5 Noel Grandin 2022-01-08 17:08:52 UTC
fix here https://gerrit.libreoffice.org/c/core/+/128143
Comment 6 Commit Notification 2022-01-08 19:45:53 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4c4ce3dc2133199f0d804a686a1e0cd0c9124914

tdf#146556 feature 'drag-mirror' is broken

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Xisco Faulí 2022-01-10 15:34:32 UTC
Verified in

Version: 7.3.0.1.0+ / LibreOffice Community
Build ID: 9304400272b7bc89e6c5a71a16efbca06b4f602c
CPU threads: 4; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

@Noel, thanks for fixing this issue!!
Comment 8 Commit Notification 2022-01-10 15:35:44 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/c9f81fa407f3342e323e648eaaf6c06234fe7376

tdf#146556 feature 'drag-mirror' is broken

It will be available in 7.3.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2022-01-10 17:00:03 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-7-2":

https://git.libreoffice.org/core/commit/d53def429f39486af22a3ac2a95c057ef9f308eb

tdf#146556 feature 'drag-mirror' is broken

It will be available in 7.2.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.