tdf#146556 feature 'drag-mirror' is broken

regression from
    commit 11e52fe2979b0947814a49b9c17ec373795cbf8e
    introduce Degree100 strong_int type

where I tried to introduce a more efficient NormAngle36000
calculation, but it produces the wrong answer.

Change-Id: Iefeb0849984bc59d3ce9191eaf6f064beba94c59
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/128143
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit 4c4ce3dc2133199f0d804a686a1e0cd0c9124914)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/128153
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>